--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <body>
     <div class="wrapper">
       <div class="imageWrapper">
-        <img class= "imageMenu js-image" id='js-image' src="./assets/menuNew.jpg" alt="">
+        <!-- <img class= "imageMenu js-image" id='js-image' src="./assets/menuNew.jpg" alt=""> -->
         <img  src="./assets/burger 142.jpg" alt="">
 
       </div>
      
-      <button class="button " id="js-button" type="button">MENU</button>
-      <div>
+      <div class="link" ><a href="./assets/menuNew.jpg" id="js-button" >menu</a></div>
+            <div>
         
       </div>
     </div>
