--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       </div>
      
-      <div class="link" ><a href="./assets/menuNew.jpg" id="js-button" >menu</a></div>
+      <div class="link" ><a  class="link" href="./assets/menuNew.jpg" id="js-button" >menu</a></div>
             <div>
         
       </div>
